--- a/style.css
+++ b/style.css
@@ -62,8 +62,7 @@ nav, .specs-header, .specs li, .stats {
 header {
     height: 100vh;
     min-height: 30em;
-    background: url(Images/36986.png)
-    no-repeat center;
+    background: url(Images/36986.png);
     background-size: cover;
     display: flex;
     flex-direction: column; 
@@ -119,8 +118,7 @@ nav a:hover {
 
 .specs {
     background:
-    url(images/honda_transalp_header.jpg)
-    no-repeat center;
+    url(Images/honda_transalp_header.jpg);
     background-size: cover;
     min-height: 40em;
     position: relative;
@@ -181,14 +179,12 @@ nav a:hover {
 
 .panel:nth-child(2) {
     background: 
-    url(images/Transalp-gallery-1024x628.png)
-    no-repeat center;
+    url(Images/Transalp-gallery-1024x628.png);
 }
 
 .panel:nth-child(3) {
     background: 
-    url(images/transalp3.png)
-    no-repeat center;
+    url(Images/transalp3.png);
 }
 
 .panel:nth-child(2),
@@ -216,8 +212,7 @@ nav a:hover {
 
 .panel-lg {
     background:
-    url(Images/Transalp4.png)
-    no-repeat center;
+    url(Images/Transalp4.png);
     background-size: cover;
     width: 100%;
     height: 100%;
