--- a/style.css
+++ b/style.css
@@ -62,8 +62,7 @@ nav, .specs-header, .specs li, .stats {
 header {
     height: 100vh;
     min-height: 30em;
-    background-image: url("36986.png")
-    no-repeat center;
+    background: url(36986.png)no-repeat center center fixed;
     background-size: cover;
     display: flex;
     flex-direction: column; 
@@ -118,9 +117,8 @@ nav a:hover {
 }
 
 .specs {
-    background-image:
-    url("honda_transalp_header.jpg")
-    no-repeat center;
+    background:
+    url(honda_transalp_header.jpg)no-repeat center center fixed;
     background-size: cover;
     min-height: 40em;
     position: relative;
@@ -181,14 +179,12 @@ nav a:hover {
 
 .panel:nth-child(2) {
     background-image: 
-    url("Transalp-gallery-1024x628.png")
-    no-repeat center;
+    url("Transalp-gallery-1024x628.png");
 }
 
 .panel:nth-child(3) {
     background-image: 
-    url("transalp3.png")
-    no-repeat center;
+    url("transalp3.png");
 }
 
 .panel:nth-child(2),
@@ -216,8 +212,7 @@ nav a:hover {
 
 .panel-lg {
     background-image:
-    url("Transalp4.png")
-    no-repeat center;
+    url("Transalp4.png");
     background-size: cover;
     width: 100%;
     height: 100%;
@@ -337,6 +332,8 @@ nav a:hover {
 }
 
 @media screen and (max-width: 900px) {
+
+
     .menu-btn{
         display: block;
         font-size: 1.2em;
